# cmos-noise-map

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  LICENSE.md  README.md  __init__.py  build.sh  get_rts.py  pyproject.toml  setup.py
.github/workflows/: python-app.yml
CMOS-readnoise/: get_rts.py
CMOS-readnoise/tests/: test_data.py
cmos-noise-map/: __main__.py  get_rts.py  read_write_fns.py
cmos-noise-map/tests/: make_test_data.py  test_data.py  test_get_rts.py
cmos-noise-map/utils/: get_rts_playground.py
cmos_noise_map/: __main__.py  get_rts.py  main.py  map_maker.py  methods.py  read_write_fns.py
cmos_noise_map/tests/: make_test_data.py  test_data.npy  test_get_rts.py
cmos_noise_map/utils/: data_utils.py  get_rts_playground.py  misc_fns.py  playground_demo.ipynb  read_write_utils.py
conda/: .meta.yaml.swp  build.sh  environment.yaml  meta.yaml
docs/: requirements.txt
docs/docs/source/: get_rts.rst
docs/source/: algorithm.md  code.md  conf.py  future-directions.md  index.md  index.rst  playground.md  playground_demo.ipynb  read_write_files.md
