[tool.poetry]
name = "cmos-noise-map"
version = "0.1.0"
description = "A tool to create a read noise map for CMOS detectors by modelling Random Telegraph Signal. This was originally created for use by LCOGT's BANZAI pipeline."
authors = ["Prerana Kottapalli"]
readme = "README.md"
packages = [{include = "cmos_noise_map"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
astropy = "^5.2.1"
numpy = "^1.24.1"
scipy = "^1.10.0"
glob2 = "^0.7"
pytest = "^7.2.1"
scikit-learn = "^1.2.1"
click = "^8.1.3"
matplotlib = "^3.6.3"
pandas = "^1.5.3"
sphinx = ">=4,<6"
myst-parser = "^0.18.1"
nbsphinx = "^0.8.12"
pandoc = "^2.3"
ipython = "^8.9.0"

[tool.poetry.extras]
docs=["sphinx"]

[tool.poetry.scripts]
rts-maker = "cmos_noise_map.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
